# experimental-cloud

./: .gitignore  CHANGELOG.md  IDEA.md  PLAN.md  README.md  e2e_test.ts  skills-lock.json
.agents/skills/zeabur-server-rent/: SKILL.md
.agents/skills/zeabur-server-ssh/: SKILL.md
.github/workflows/: backend-build.yml  backend.yml  deploy-zeabur.yml  execution-agent.yml  signal-tracker.yml  test.yml
backend/: .env.example  .env.test  Dockerfile  package-lock.json  package.json  zeabur.json
backend/src/: index.ts
backend/src/db/: index.ts  logger.ts  migrate.ts  test-migrate.ts
backend/src/routes/: auth.ts  executionAgents.ts  index.ts  internal.ts  wallets.ts
backend/src/services/: audit.ts  zeabur.ts
backend/src/types/: index.ts
docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md
execution-agent/: .env.example  Dockerfile  pyproject.toml
execution-agent/src/: types.py
execution-agent/src/executor/: agent.py  core.py
execution-agent/src/executor_agent/: __init__.py  main.py
execution-agent/src/hyperliquid/: client.py
execution-agent/src/subscriber/: redis_subscriber.py
execution-agent/src/wallet/: manager.py
execution-agent/tests/: test_hyperliquid_client.py  test_signal_flow.py
infrastructure/: backend.yaml  execution-agent.yaml  signal-tracker.yaml  template.yaml
signal-tracker/: Dockerfile  package-lock.json  package.json
signal-tracker/src/: index.ts
signal-tracker/src/__tests__/: hyperliquid.integration.test.ts
signal-tracker/src/detector/: index.ts
signal-tracker/src/hyperliquid/: api.ts  store.ts  websocket.ts
(+5 files in other folders)
