[project]
name = "ai-copytrading-execution-agent"
version = "1.0.0"
description = "AI Copy-Trading Signal Platform - Execution Agent"
requires-python = ">=3.11"
dependencies = [
    "python-dotenv>=1.0.0",
    "eth-account>=0.5.0",
    "redis>=5.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "structlog>=24.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.8.0",
    "ruff>=0.3.0",
]

[project.scripts]
execution-agent = "executor_agent.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/executor_agent"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"